# lerobot-policy-kai0

./: .gitignore  README.md  kai0_lerobot_integration.md  pyproject.toml  train_kai0.yaml
lerobot_policy_kai0/: README.md  pyproject.toml
lerobot_policy_kai0/src/lerobot_policy_kai0/: __init__.py  configuration_kai0.py  modeling_kai0.py  processor_kai0.py
src/lerobot_policy_kai0/: __init__.py  configuration_kai0.py  modeling_kai0.py  processor_kai0.py
